--- a/themes/socialasset/assets/css/_what-we-do.css
+++ b/themes/socialasset/assets/css/_what-we-do.css
@@ -1,10 +1,20 @@
 .page-banner{
 	position: relative;
 }
+.page-banner-controller{
+	position: relative;
+	min-height: 543px;
+}
 .page-banner-bg{
 	background-size: cover !important;
 	background-position: center center !important;
 	background-repeat: no-repeat !important;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	z-index: 1;
 }
 .page-banner-des-inner{
 	display: flex;
@@ -17,6 +27,7 @@
     right: 0;
     top: 0;
     bottom: 0;
+    z-index: 2;
 }
 .page-banner-controller .page-banner-des,
 .page-banner-controller .container,
