--- a/themes/socialasset/assets/css/_home.css
+++ b/themes/socialasset/assets/css/_home.css
@@ -119,7 +119,7 @@
 	z-index: 4
 }
 .hm-banner-design-2 h2{
-	/* font-family: "NeutrafaceTextBold"; */
+	font-family: "NeutrafaceTextBold";
 	margin-bottom: 38px;
 	text-transform: uppercase;
 	font-weight: 700;
@@ -260,6 +260,7 @@ span.hm-wc-social-assets-top-shape {
 	opacity: 1;
 }
 .hm-user-support-rgt-des p{
+	font-family: 'Roboto Condensed', sans-serif; 
 	font-size: 15px;
 	line-height: 25px;
 	margin-bottom: 32px;
@@ -435,7 +436,6 @@ span.hm-wc-social-assets-top-shape {
 }
 .hm-testimonials-head h4{
 	margin-bottom: 15px;
-	font-weight: 700;
 }
 .hm-testimonials-head p{
 	font-family: 'Roboto Condensed', sans-serif;
@@ -544,7 +544,6 @@ span.btm-q-icon {
 	padding-bottom: 55px;
 }
 .hm-blog-head h4{
-	font-weight: 700;
 	color: #0054FD;
 	margin-bottom: 22px;
 }
@@ -607,12 +606,11 @@ span.btm-q-icon {
 	transform: scale(1.05);
 }
 .hm-blog-grid-des{
-	/* font-family: 'Roboto Condensed', sans-serif; */
+	font-family: 'Roboto Condensed', sans-serif;
 	padding: 30px 17px 10px 16px;
 }
 .hm-blog-grid-des h6{
 	font-size: 15px;
-	font-weight: 700;
 	margin-bottom: 6px;
 }
 .hm-blog-grid-des p{
