--- a/themes/socialasset/assets/css/_campaign-list.css
+++ b/themes/socialasset/assets/css/_campaign-list.css
@@ -257,7 +257,65 @@ min-height: 42px;
 	transform: translateY(-50%);
 	-ms-transform: translateY(-50%);
 	-webkit-transform: translateY(-50%);
+	color: #F84574;
 }
+.campaigns-list-item-wrp.campaigns-list-item-50 .campaigns-item-cat-name span{
+	color: #fff;
+}
+.campaigns-list-item-des-hover .campaigns-item-cat-name span{
+	color: #fff!important;
+}
+
+.campaigns-list-item-wrp.no-image .campaigns-list-item{
+	min-height: 430px;
+}
+.campaigns-list-item-wrp.no-image .campaigns-list-item{
+	position: relative;
+	background: #016083;
+	border-radius: 5px;
+}
+.campaigns-list-item-wrp.no-image .campaigns-item-des{
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	background: transparent;
+	color: #fff;
+}
+.campaigns-list-item-wrp.no-image .campaigns-vote-percentage-number span{
+	color: #fff;
+}
+.campaigns-list-item-wrp.no-image .campaigns-item-cat-name span{
+	color: #fff;
+}
+.campaigns-list-item-wrp.no-image .campaigns-item-cat-name strong{
+	background: #014c69;
+}
+.campaigns-list-item-wrp.no-image .campaigns-item-des-inr{
+	height: 100%;
+	position: relative;
+}
+
+.campaigns-list-item-wrp.no-image .campaigns-vote-info{
+	position: absolute;
+	left: 0;
+	right: 0;
+	bottom: 0;
+}
+.campaigns-list-item-wrp.no-image .campaigns-item-des{
+	background-image: url(../images/round-for-sky-bg.png);
+    background-repeat: no-repeat;
+    background-position: right 20px bottom 70px;
+}
+
+.campaigns-list-item-wrp.no-image .campaigns-item-img{
+	display: none;
+}
+.campaigns-list-item-wrp.no-image .campaigns-list-item:hover .campaigns-item-cat-name strong{
+	background: #0145cc;
+}
+
 .campaigns-item-des h6{
 	margin-bottom: 15px;
 }
