--- a/themes/socialasset/assets/css/_home-page.css
+++ b/themes/socialasset/assets/css/_home-page.css
@@ -964,10 +964,10 @@
 		display: block!important;
 	}
 	.sa-welcome-grid-item-top-des-img {
-	    left: -3%;
+	    left: 10%;
 	}
 	.sa-welcome-grid-item-bottom-des-img {
-	    left: -9%;
+	    left: 1%;
 	}
 	.sa-user-right {
 	    max-width: 350px;
@@ -982,25 +982,40 @@
 	.show-md{
 		display: block!important;
 	}
-	.page-banner .banner-icon img{
-		max-width: 250px;
+	.sa-main-slider-des-inner strong {
+	    font-size: 40px;
+	    line-height: 48px;
+	    padding-bottom: 30px;
 	}
-	.sa-banner-cam-des{
+	.sa-main-slider-des-inner span.bsn:before {
+	    bottom: 0%;
+	    left: 5%;
+	    width: 178px;
+	    height: 14px;
+	}
+	.sa-main-slider-des-inner span.scl:after {
+	    bottom: 0%;
+	    left: -3%;
+	    width: 140px;
+	    height: 14px;
+	}
+	.sa-main-slider-des-inner a {
+	    padding: 18px 55px;
+	}
+	.banner-icon{
+		display: none;
+	}
+	.sa-main-slider-cam-des{
 	    padding-left: 30px;
 	    padding-top: 40px;
 	    padding-right: 35px;
 	}
-	.sa-banner-cam-des p br{
+	.sa-main-slider-cam-des p br{
 		display: none;
 	}
 	.social-asset-welcome-section{
 	    padding-top: 70px;
 	    padding-bottom: 80px;
-	}
-	.social-asset-welcome-section-inner h1{
-	    font-size: 32px;
-	    line-height: 39px;
-	    padding-bottom: 25px;
 	}
 	.social-asset-welcome-section-inner em{
 	    font-size: 22px;
@@ -1012,6 +1027,12 @@
 	    line-height: 31px;
 	    padding-bottom: 45px;
 	}
+	.more-btn a {
+	    padding: 17px 67px 17px 67px;
+	}
+	.sa-welcome-grid-section {
+	    margin-top: -88px;
+	}
 	.sa-welcome-grid-item-top-des-inner,
 	.sa-welcome-grid-item-bottom-des-inner{
 		padding: 0 30px;
@@ -1020,24 +1041,34 @@
 	.sa-welcome-grid-item-bottom-des-inner p br{
 		display: none;
 	}
+	.sa-welcome-grid-item-top-des-img,
+	.sa-welcome-grid-item-bottom-des-img{
+		display: none;
+	}
 	.sa-user-section {
 	    padding-top: 40px;
 	    padding-bottom: 100px;
 	}
-	.sa-user-right {
-	    max-width: 250px;
+	.sa-user-right{
+		position: relative;
+	    max-width: initial;
+	    padding: 50px 40px 65px;
+	    text-align: center;
+	    width: 85%;
+	    margin: auto;
+	    margin-top: -105px;
 	}
 	.hmc{
 		height: 230px;
 	}
 	.sa-usr-rgt-des h3 {
-		font-size: 28px;
 	    padding-bottom: 10px;
 	}
 	.sa-usr-rgt-des p {
 	    font-size: 12px;
 	    line-height: 20px;
-	    padding-bottom: 8px;
+	    padding-bottom: 0px;
+	    margin-bottom: 20px;
 	}
 	.sa-campaigns-grid-section {
 	    padding-bottom: 100px;
@@ -1046,23 +1077,21 @@
 	    padding-top: 35px;
 	}
 	.sa-cam-grd-item-des h3 {
-	    font-size: 25px;
-	    line-height: 28px;
+    	line-height: 35px;
 	}
 	.sa-testimonial-section {
-	    padding-top: 40px;
+	    padding-top: 50px;
 	    padding-bottom: 100px;
 	}
 	.sa-testimonial-sec-top h4 {
 	    line-height: 35px;
-	    padding-bottom: 10px;
+	    padding-bottom: 15px;
 	}
 	.sa-testimonial-sec-top p {
 	    line-height: 18px;
-	    padding-bottom: 20px;
 	}
-	.sa-testimonial-sec-wrap {
-	    padding: 32px 0 70px 0;
+	.sa-testimonial-section-wrap {
+	    padding: 42px 0 65px 0;
 	}
 	.sa-testimonial-sec-blockquot-inner {
 	    padding: 35px 90px 0 50px;
@@ -1070,16 +1099,19 @@
 	.sa-testimonial-sec-blockquot-inner p {
 	    padding-bottom: 20px;
 	}
+	.sa-testimonial-icon{
+		display: none;
+	}
 	.sa-companies-section {
-	    padding-top: 55px;
-	    padding-bottom: 60px;
+	    padding-top: 65px;
+    	padding-bottom: 65px;
 	}
 	.sa-companies-sec-inner h4 {
-	    padding-bottom: 50px;
+	    padding-bottom: 60px;
 	}
 	.sa-blog-section {
-	    padding-top: 90px;
-	    padding-bottom: 110px;
+	    padding-top: 80px;
+    	padding-bottom: 80px;
 	}
 	.sa-blog-sec-hdr h4 {
 	    padding-bottom: 10px;
@@ -1096,20 +1128,20 @@
 	.show-sm{
 		display: block!important;
 	}
-	.sa-banner-cam-img{
+	.sa-main-slider-cam-img{
 		display: none;
 	}
-	.sa-banner-cam-des{
+	.sa-main-slider-cam-des{
 		width: 100%;
 		text-align: center;
 		padding: 0 30px;
 	}
-	.sa-banner-cam-des strong {
+	.sa-main-slider-cam-des strong {
 	    padding-top: 6px;
 	    padding-bottom: 10px;
 	    font-size: 25px;
 	}
-	.sa-banner-cam-des a.campaign {
+	.sa-main-slider-cam-des a.campaign {
 	    padding: 21px 60px;
 	}
 	.sa-welcome-grid-item-top-img-wrap, 
@@ -1128,10 +1160,6 @@
 		width: 100%;
 		margin: 0 auto;
 	}
-	.sa-welcome-grid-item-top-des,
-	.sa-welcome-grid-item-bottom-des{
-		background: #F4F5F9;
-	}
 	.sa-welcome-grid-item{
 		margin-bottom: 20px;
 	}
@@ -1142,8 +1170,7 @@
 	.sa-welcome-grd-top-bg{
 		display: none;
 	}
-	.social-asset-welcome-section-inner h1 {
-	    font-size: 32px;
+	.social-asset-welcome-section-inner h1{
 	    line-height: 39px;
 	    padding-bottom: 25px;
 	}
@@ -1193,18 +1220,7 @@
 	.more-btn a {
 	    padding: 17px 50px 16px 50px;
 	}
-	.sa-user-right{
-		position: relative;
-	    max-width: 85%;
-	    margin: auto;
-	    margin-top: -120px;
-	    top: 0;
-	    left: 0;
-	    right: 5%;
-	}
-	.sa-usr-rgt-des-wrap{
-	    min-height: 275px;
-	}
+
 
 	.sa-welcome-grid-item-top-des-inner p, 
 	.sa-welcome-grid-item-bottom-des-inner p {
@@ -1243,9 +1259,7 @@
 	    padding-top: 30px;
 	    padding-bottom: 90px;
 	}
-	.sa-testimonial-sec-top h4{
-		font-size: 25px;
-	}
+	
 	.sa-testimonial-sec-wrap {
 	    padding: 25px 0 50px 0;
 	}
@@ -1271,11 +1285,11 @@
 	    left: 15px;
 	}
 	.sa-testimonial-sec-blockquot-inner:after {
-	    bottom: -48px;
+	    bottom: -25px;
 	    right: 50px;
 	}
 	.sa-testimonial-section .slick-dots {
-	    bottom: -15%;
+	    bottom: -38%;
 	}
 	.sa-blog-grid ul li {
 	    width: 100%;
@@ -1299,15 +1313,20 @@
 	.show-xs{
 		display: block!important;
 	}
-	.page-banner .banner-icon {
-	    right: -15px;
-	    bottom: -5px;
+	.sa-main-slider-des-inner strong {
+	    font-size: 30px;
+	    line-height: 38px;
 	}
-	.page-banner .banner-icon img {
-	    max-width: 150px;
+	.sa-main-slider-des-inner span.bsn:before {
+	    width: 134px;
+	}
+	.sa-main-slider-des-inner span.scl:after {
+	    width: 105px;
+	}
+	.sa-main-slider-cam-des p br{
+		display: none;
 	}
 	.social-asset-welcome-section-inner h1 {
-	    font-size: 32px;
 	    line-height: 39px;
 	    padding-bottom: 15px;
 	}
@@ -1339,12 +1358,11 @@
 	}
 	.sa-testimonial-sec-top p {
 	    line-height: 15px;
-	    padding-bottom: 15px;
 	    font-size: 12px;
 	}
-	.sa-usr-rgt-des-wrap{
-		display: block;
-   		padding: 70px 40px;
+	.sa-user-right {
+	    padding: 30px 40px 35px;
+	    left: 0%;
 	}
 
 }
@@ -1363,6 +1381,39 @@
 	}
 	.sa-banner-cam-des p br{
 		display: none;
+	}
+	.sa-usr-rgt-des p {
+	    margin-bottom: 12px;
+	}
+	.sa-campaigns-grid-section {
+	    padding-bottom: 50px;
+	}
+	.sa-companies-section {
+	    padding-top: 50px;
+	    padding-bottom: 50px;
+	}
+	.sa-companies-sec-inner h4 {
+	    padding-bottom: 40px;
+	}
+	.sa-companies-section .slick-dots {
+	    top: 145%;
+	}
+	.sa-blog-section {
+	    padding-top: 50px;
+	    padding-bottom: 50px;
+	}
+	.sa-main-slider-des-inner strong {
+	    font-size: 22px;
+	    line-height: 28px;
+	    padding-bottom: 25px;
+	}
+	.sa-main-slider-des-inner span.bsn:before {
+	    width: 100px;
+	    height: 10px;
+	}
+	.sa-main-slider-des-inner span.scl:after {
+	    width: 76px;
+	    height: 10px;
 	}
 
 }
