for businesses page done

--- a/themes/socialasset/assets/css/main.css
+++ b/themes/socialasset/assets/css/main.css
@@ -9,6 +9,7 @@
 /* Shoriful*/
 @import url('_what-we-do.css');
 @import url('_home-page.css');
+@import url('_for-businesses-page.css');
 
 
 /*Milon*/
