--- a/themes/socialasset/assets/css/_login-register.css
+++ b/themes/socialasset/assets/css/_login-register.css
@@ -1778,6 +1778,14 @@ a.ui-datepicker-next:after {
 	display: none;
 }
 
+.content-center-cntlr .login-form-cntlr {
+	display: flex;
+	align-items: center;
+}
+/*.content-center-cntlr .fl-login .fl-login-form{
+	overflow-y: scroll;
+	height: 100vh;
+}*/
 
 @media(max-width: 1499px){
 
