--- a/themes/socialasset/assets/css/_faq.css
+++ b/themes/socialasset/assets/css/_faq.css
@@ -15,12 +15,12 @@
 }
 .faq-page-entry-hdr ul{
 	text-align: center;
-	padding-bottom: 65px;
+	padding-bottom: 50px;
 }
 .faq-page-entry-hdr ul li{
 	display: inline-block;
 	vertical-align: baseline;
-	padding: 0 25px;
+	padding: 0 25px 15px;
 }
 .faq-page-entry-hdr ul li a{
 	color: #0055FF;
@@ -179,17 +179,34 @@ box-shadow: 0px 7px 17px 0px rgba(223,226,232,1);
 	    padding-left: 30px;
 	    padding-right: 35px;
 	}
-	.hh-accordion-title:after{
-		right: 30px;
+	.hh-accordion-title{
+		padding-right: 60px;
 	}
 	.video-play a:after{
 		width: 40px;
+	}
+	.hh-accordion-title:after {
+	    right: 18px;
+	}
+	.faq-page-sec-cntlr{
+		padding-top: 70px;
+		padding-bottom: 100px;
 	}
 }
 
 @media(max-width: 575px){
 	.video-play a:after{
 		width: 30px;
+	}
+	.hh-accordion-des,
+	.hh-accordion-title{
+		padding-left: 15px;
+	}
+	.hh-accordion-des{
+		padding-right: 15px;
+	}
+	.hh-accordion-title {
+	    padding-right: 50px;
 	}
 
 }
