--- a/themes/socialasset/assets/css/_campaign-list.css
+++ b/themes/socialasset/assets/css/_campaign-list.css
@@ -495,6 +495,19 @@ min-height: 42px;
 	max-width: 503px;
 }
 
+
+.only-des .campaigns-item-des p{
+	height: 36px;
+	overflow: hidden;
+}
+.only-des  .campaigns-list-item-des-hover .campaigns-item-cat-name{
+	margin-bottom: 12px;
+}
+.only-des .campaigns-list-item-des-hover-des p{
+	padding-left: 0;
+	height: 36px;
+	overflow: hidden;
+}
 @media(max-width: 991px){
 	.user-campaign-list-cntlr ul li{
 		width: 50%;
