--- a/themes/socialasset/assets/css/_user-campaign-page.css
+++ b/themes/socialasset/assets/css/_user-campaign-page.css
@@ -1,3 +1,6 @@
+.wp-editor-container textarea.wp-editor-area {
+    visibility: visible !important;
+}
 .pass-error-new {
     padding-left: 178px;
 }
