--- a/themes/socialasset/assets/css/_what-we-do.css
+++ b/themes/socialasset/assets/css/_what-we-do.css
@@ -56,7 +56,7 @@
 }
 .wwd-desc-sct-inner p{
 	text-align: center;
-	margin-bottom: 45px;
+	margin-bottom: 55px;
 	line-height: 30px;
 	font-size: 20px;
 	color: #000000;
@@ -382,6 +382,9 @@
 	.jjsg-des p br{
 	    display: none;
 	}
+	.wwd-user-sec-rgt {
+	    right: 52px;
+	}
 
 	
 }
@@ -396,20 +399,32 @@
 	.page-banner-controller {
 	    min-height: 443px;
 	}
+	.wwd-des-section {
+	    padding-top: 45px;
+	    padding-bottom: 45px;
+	}
 	.jjsg-des {
 	    padding: 0 0px;
 	}
 	.jjsg-des-top, 
 	.jjsg-des-bottom {
-	    padding: 70px 0 60px 15px;
+	    padding: 70px 15px 60px 15px;
 	    display: block;
 	    min-height: auto;
+	    max-width: 480px;
+	    width: 100%;
+	    margin: 0 auto;
 	}
 	.wwd-campaigns-grid-item ul li{
 		width: 100%;
 		padding-left: 0px;
 		padding-right: 0px;
 		padding-bottom: 20px;
+	}
+	.wwd-campaigns-grid-item-wrap {
+	    max-width: 500px;
+	    width: 100%;
+	    margin: 0 auto;
 	}
 	.wwd-campaigns-grid-item-des{
 		padding: 0 75px;
@@ -429,19 +444,21 @@
 	    margin-left: 0px;
 	    margin-right: 0px;
 	}
-	.wwd-user-sec-rgt{
-		position: relative;
+	.wwd-user-sec-rgt {
+	    position: relative;
 	    max-width: 85%;
 	    margin: auto;
-	    margin-top: -120px;
+	    margin-top: -52px;
 	    z-index: 12;
-	    top: 0;
+	    top: 0px;
 	    left: 0;
 	    right: 5%;
 	}
 	.wwd-user-sec-rgt-inner{
 		display: block;
-    	padding: 70px 40px;
+	    padding: 30px 40px;
+	    text-align: center;
+	    min-height: 185px;
 	}
 	.jjsg-des-top-wrap, 
 	.join-journey-sct-grid-img-bottom-wrap {
@@ -454,10 +471,8 @@
 	.join-journey-sct-grid-inner{
 		padding-bottom: 20px;
 	}
-	.jjsg-des-top,
 	.join-journey-sct-grid-img-top,
-	.join-journey-sct-grid-img-bottom,
-	.jjsg-des-bottom{
+	.join-journey-sct-grid-img-bottom{
 		max-width: 480px;
 		width: 100%;
 		margin: 0 auto;
@@ -542,6 +557,10 @@
 	}
 	.jjsg-des {
 	    padding: 0;
+	}
+	.wwd-user-sec-rgt-des p {
+	    font-size: 14px;
+	    line-height: 22px;
 	}
 
 }
